Fix footer on smaller screens

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,30 +28,12 @@ body {
     background-color: #fff;
     padding:          10px;
     box-sizing:       border-box;
-    display:          flex;
-    flex-flow:        column;
     height:           100%;
     margin-top:       17px;
 }
 
 #wrapper {
   min-height:     100%;
-  padding-bottom: 4em;
-}
-#footer {
-    clear: both;
-    box-shadow:       0 1px 2px rgba(0,0,0,.2);
-    background-color: #333;
-    padding:          10px;
-    font-size:        14px;
-    position:         relative;
-    bottom:           0;
-    width:            100%;
-    height:           4em;
-    margin-top:       -4em;
-}
-#footer a:hover {
-  background-color: #333;
 }
 
 .left {
@@ -74,4 +56,45 @@ a:hover {
 .menu .active > a {
     color: #fefefe;
     background: #C6572F;
+}
+
+.container {
+  display:         flex;
+  flex-flow:       row wrap;
+  align-items:     center;
+  justify-content: center;
+  align-content:   center;
+}
+
+.right-footer {
+  float: right;
+  max-width: 500px;
+}
+
+.larger {
+  display: inline;
+  font-size: 20px;
+}
+
+.left-footer {
+  float: left;
+}
+
+#footer {
+  clear: both;
+  background-color: #333;
+  padding:          10px;
+  font-size:        14px;
+  position:         relative;
+  bottom:           0;
+  width:            100%;
+  overflow:         hidden;
+}
+#footer a:hover {
+  background-color: #333;
+  color:            #C6572F;
+}
+
+#footer a {
+  color: #666;
 }
