--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -2,13 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.container {
-  display:        flex;
-  flex-flow:      row wrap;
-  align-items:    flex-start;
-  align-content:  space-around;
-}
-
 .project {
     margin:           auto;
     box-shadow:       0 1px 2px rgba(0,0,0,.2);
